# FudanDNN

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cmake/: FindViennaCL.cmake
src/fudandnn/core/: CMakeLists.txt  MasterControl.cpp  RBM.cpp
src/fudandnn/tests/: CMakeLists.txt  cnn_test.cpp  fudandnn_test.cpp  gpu_test.cpp
